método que escribe de la caché al buffer